Bug 1186856 ServiceWorker .register() should always stop current registration from uninstalling. r=jdm